# hallow-streets

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindBOOST.cmake  FindPHYSX.cmake
resources/icon/: icon.rc
resources/objects/alter/: alter.blend  alter.blend1  alter.mtl
resources/objects/bed/: bed.blend  bed.blend1  bed.mtl
resources/objects/building_parts/: buildings.blend  buildings.blend1  corner.blend  corner.blend1  corner.mtl  door.mtl  generic_floor.mtl  loading_area_ground.mtl  loading_door.mtl  sighn.mtl  trash_square.mtl  wall.mtl  wall_clock_ang.mtl  wall_with_door.mtl  wall_with_loading_area.mtl
resources/objects/camp_fire/: camp_fire.blend  camp_fire.blend1  camp_fire.mtl
resources/objects/chicken/: chicken.blend  chicken.mtl
resources/objects/chicken_cursed/: chicken.blend1
resources/objects/cube/: cube.blend  cube.mtl
resources/objects/fruit/: fruit.blend  fruit.mtl  fruit_plant.blend  fruit_plant.mtl
resources/objects/inside_objects/: computer.mtl  generic_floor.mtl  inside_objects.blend  inside_objects.blend1  lever.mtl  lever_base.mtl  table.mtl
resources/objects/light_post/: light post.blend  light post.blend1  light post.mtl
resources/objects/log/: log.blend  log.blend1  log.mtl
resources/objects/machines/: cannon.mtl  cannon_frame.mtl  loading.mtl  lower_platform.mtl  machines.blend  machines.blend1  zap_machine_whole.mtl  zap_sphere.mtl  zap_tower.mtl
resources/objects/robot/: robot_body1.mtl  robot_head1.mtl  robot_parts.blend  robot_parts.blend1
resources/objects/rooftop/: roof_fill.mtl  roof_top_objects.blend  roof_top_objects.blend1  roof_top_objects.mtl  slanted_roof.mtl
resources/objects/sidestreet/: sidestreet.blend  sidestreet.blend1  sidestreet.mtl
resources/objects/sidewalk/: sidewalk.blend  sidewalk.blend1  sidewalk.mtl
resources/objects/sky_tracks/: sky_rails.blend  sky_rails.blend1  sky_rails_c.mtl  sky_rails_cart.mtl  sky_rails_s.mtl  sky_rails_support.mtl
resources/objects/table/: table.blend  table.blend1  table.mtl
resources/objects/traps/: traps.blend  traps.blend1  traps.mtl
src/client/: client.cpp
src/dawn/: camera.cpp  city.h  city_gen.cpp  main.cpp  skymap.cpp
src/dawn/shaders/: selection.fs  selection.vs  world_map.vs
src/dawn/shaders/weather/: rain.vs
src/dialog/: dialog.cpp  dialog.h  main.cpp
src/dialog/conversations/: test1.con
src/engine/: animation_manger.cpp  animation_manger.h  audio_manger.cpp  audio_manger.h  camera.cpp  camera.h  city.cpp  city.h  city_gen.cpp  city_gen.h  keyboard_manger.cpp  keyboard_manger.h  lighting.cpp  lighting.h  main.cpp  mesh.h  model.cpp  model.h  object_manger.cpp  object_manger.h  path_finding.cpp  path_finding.h  player.cpp  player.h  shader.h  sky.cpp  sky.h  skymap.cpp  skymap.h  stealth.cpp  stealth.h  text_rendering.cpp  text_rendering.h  time.cpp  time.h  world.cpp  world.h
src/engine/gui/: GUI.cpp  GUI.h  imgui_impl_glfw_gl3.cpp
src/engine/networking/: chat_message.hpp  client.cpp  client.h  network_manager.cpp  network_manager.h  server.cpp  server.h
src/engine/shaders/: alter.fs  cursed.fs  lighting.fs  lighting.vs  lighting_instance.fs  lighting_instances.vs
src/engine/shaders/deffered_lighting/: deferred_shading.fs  g_buffer.vs
src/engine/shaders/gui/: GUI.gs
src/engine/shaders/weather/: rain.gs
src/lighting_test/: camera.h  deferred_shading.cpp
src/lighting_test/lighting_shaders/: deferred_shading.fs
src/mass_rendering_system/: city.cpp  main.cpp  object_manger.h
src/networking_test/: chat_message.hpp  client.cpp  client.h  main.cpp  network_manager.cpp  network_manager.h  server.cpp  server.h  time.cpp
src/server/: server.cpp
